spacing css resolved

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -13,11 +13,6 @@ footer .footer p {
   margin: 0;
 }
 
-.table-of-contents-what-is-nps-types-of-nps-investment-plans-why-invest-in-nps-top-6-reasons-final-thoughts-frequently-asked-questions-container p{
-  margin: 0;
-  padding: 0
-}
-
 .table-of-contents-what-is-nps-types-of-nps-investment-plans-why-invest-in-nps-top-6-reasons-final-thoughts-frequently-asked-questions-container .default-content-wrapper .blogs-main-heading{
   color: #333;
   font-family: "Inter", sans-serif;
